Fix overflow scroll, table borders and space under EAD button

--- a/ESSArch_TP/frontend/static/frontend/styles/modules/index.scss
+++ b/ESSArch_TP/frontend/static/frontend/styles/modules/index.scss
@@ -817,6 +817,11 @@ input[type="checkbox"] {
 }
 .file-list-view {
     margin-top: 10px;
+    max-height: 400px;
+    overflow-y: auto;
+    thead, tbody {
+        border: 1px solid $border-color;
+    }
     .type-name-column {
         display: flex;
         align-items: center;
